<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P2</string>
    <string name="action_settings">Settings</string>
    <string name="btnConnect">Connect</string>
    <string name="btnMap">See Map</string>
    <string name="btnRegister">Register Group</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnDisconnect">Disconnect</string>
    <string name="tvGroups">Active Groups</string>
    <string name="alertDialogTitle_btnRegGrp">Create a group:</string>
    <string name="tvHintGroupname">Groupname:</string>
    <string name="tvHintUsername">Username:</string>
    <string name="tvMembers">Members in this group:</string>
    <string name="toastUpdateGrp">Updating groups..</string>
    <string name="toastJoinGrp">Joined group</string>
    <string name="toastMarker">Updated map-marker: </string>
    <string name="toastUnsubscribe">Unsubscribed from group</string>
    <string name="toastError">Fill in the fields, please!</string>
    <string name="toastPositionUpdate">Position updated</string>

    <string-array name="drawer_choises">
        <item>Map</item>
        <item>Groups</item>
        <item>Cheatmode On</item>
        <item>Cheatmode off</item>
    </string-array>

</resources>
