<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userFrag"
    tools:context="com.example.manco.googlemapp2.UserFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:background="@android:color/background_dark"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvGroups"
            android:id="@+id/tvGroups"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView" >

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ListView
                        android:layout_width="wrap_content"
                        android:layout_height="352dp"
                        android:id="@+id/listView2" />
                </FrameLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alertDialogTitle_btnRegGrp"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/tvHintGroupname"
                android:ems="10"
                android:id="@+id/etCreateGroupName"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/tvHintUsername"
                android:ems="10"
                android:id="@+id/etCreateUsername"
                android:layout_gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                android:id="@+id/buttonRegisterGroup"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
